--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "barryvdh/laravel-dompdf":"0.7.*",
         "maatwebsite/excel": "^2.1",
         "doctrine/dbal": "^2.5",
-        "arielcr/numero-a-letras": "dev-master"
+        "arielcr/numero-a-letras": "dev-master",
+        "intervention/image": "^2.4"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
