--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-APP_ENV=local
+APP_ENV=production
 APP_DEBUG=true
 APP_KEY=base64:2RBTm1GJMV1QgFfME/vCAVyd176sr8d7Gvk9hIPjaQM=
 APP_URL=http://localhost
@@ -7,8 +7,8 @@ DB_CONNECTION=mysql
 DB_HOST=localhost
 DB_PORT=3306
 DB_DATABASE=sacawa
-DB_USERNAME=root
-DB_PASSWORD=
+DB_USERNAME=admin_sacawa
+DB_PASSWORD=Admin.Sacawa2018
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
