--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,20 @@
 APP_ENV=local
 APP_DEBUG=true
-APP_KEY=SomeRandomString
+APP_KEY=base64:2RBTm1GJMV1QgFfME/vCAVyd176sr8d7Gvk9hIPjaQM=
+APP_URL=http://localhost
 
+DB_CONNECTION=mysql
 DB_HOST=localhost
-DB_DATABASE=sfi_esqui
-DB_USERNAME=root
-DB_PASSWORD=
+DB_PORT=3306
+DB_DATABASE=sacawa
+DB_USERNAME=admin_sacawa
+DB_PASSWORD=Admin.Sacawa2018
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
 QUEUE_DRIVER=sync
 
-REDIS_HOST=localhost
+REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
